@@ -41,7 +41,7 @@ If you are programmer/sysadmin or you just feeling that you are able to run loca
 * *UI*: HTML, Bootstrap and a bit of JavaScript with JQuery
 * *Security*: Spring Security
 * *Databases*: H2 or MySQL
-* *Database access*: Spring Data JPA (and Hibernate as JPA provider) or Spring's `JdbcTemplate`
+* *Database access*: Spring's `JdbcTemplate`
 * *Database migrations*: Liquibase
 * *Validation*: JSR-303 (Hibernate Validator)
 * *Logging*: Slf4j (log4j)
