@@ -1,9 +1,0 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<persistence xmlns="http://java.sun.com/xml/ns/persistence"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/persistence persistence_2_0.xsd"
-	version="2.0">
-	
-	<persistence-unit name="DefaultPersistenceUnit" transaction-type="RESOURCE_LOCAL" />
-	
-</persistence>
