@@ -10,15 +10,6 @@ spring.h2.console.enabled: true
 spring.h2.console.path: /console
 security.basic.enabled: false
 
-spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql: false
-spring.jpa.properties.hibernate.format_sql: true
-spring.jpa.properties.hibernate.connection.charset: UTF-8
-spring.jpa.properties.hibernate.hbm2ddl.auto: validate
-# our mapping doesn't conform to org.springframework.boot.orm.jpa.hibernate.SpringNamingStrategy that is used by default
-spring.jpa.hibernate.naming_strategy: org.hibernate.cfg.EJB3NamingStrategy
-spring.jpa.open-in-view: false
-
 spring.mail.host: 127.0.0.1
 spring.mail.port: 1025
 spring.mail.username: unused
@@ -44,7 +35,6 @@ logging.level.ru.mystamps: DEBUG
 logging.level.liquibase: WARN
 logging.level.org.springframework.web.servlet.handler.SimpleUrlHandlerMapping: WARN
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping: WARN
-logging.level.org.hibernate.tool.hbm2ddl.TableMetadata: WARN
 
 spring.autoconfigure.exclude: \
 	  org.springframework.boot.autoconfigure.jms.activemq.ActiveMQAutoConfiguration \
