@@ -8,15 +8,6 @@ spring.datasource.initialize: false
 spring.datasource.validation-query: SELECT 1
 spring.datasource.test-on-borrow: true
 
-spring.jpa.database-platform: ru.mystamps.web.support.hibernate.MySql5InnoDbDialect
-spring.jpa.show-sql: false
-spring.jpa.properties.hibernate.format_sql: true
-spring.jpa.properties.hibernate.connection.charset: UTF-8
-spring.jpa.properties.hibernate.hbm2ddl.auto: validate
-# our mapping doesn't conform to org.springframework.boot.orm.jpa.hibernate.SpringNamingStrategy that is used by default
-spring.jpa.hibernate.naming_strategy: org.hibernate.cfg.EJB3NamingStrategy
-spring.jpa.open-in-view: false
-
 spring.mail.host: 127.0.0.1
 spring.mail.port: 1025
 spring.mail.username: unused
@@ -41,7 +32,6 @@ logging.level.: INFO
 logging.level.ru.mystamps: DEBUG
 logging.level.org.springframework.web.servlet.handler.SimpleUrlHandlerMapping: WARN
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping: WARN
-logging.level.org.hibernate.tool.hbm2ddl.TableMetadata: WARN
 
 app.upload.dir: /tmp
 
